include/crispasr.h


struct whisper_context;
struct whisper_full_params;
typedef int32_t whisper_token;
struct whisper_context_params {
    bool use_gpu;
    bool flash_attn;
    int gpu_device; 
    bool dtw_token_timestamps;
    enum whisper_alignment_heads_preset dtw_aheads_preset;
    int dtw_n_top;
    struct whisper_aheads dtw_aheads;
    size_t dtw_mem_size; 
};
typedef struct whisper_grammar_element {
    enum whisper_gretype type;
    uint32_t value; 
} whisper_grammar_element;
typedef struct whisper_vad_params {
    float threshold;             
    int min_speech_duration_ms;  
    int min_silence_duration_ms; 
    float max_speech_duration_s; 
    int speech_pad_ms;           
    float samples_overlap;       
} whisper_vad_params;
CRISPASR_API struct whisper_context* whisper_init_from_file_with_params(const char* path_model,
                                                                        struct whisper_context_params params);
CRISPASR_API void whisper_free(struct whisper_context* ctx);
CRISPASR_API void whisper_free_params(struct whisper_full_params* params);
CRISPASR_API void whisper_free_context_params(struct whisper_context_params* params);
CRISPASR_API int whisper_lang_id(const char* lang);
CRISPASR_API const char* whisper_lang_str(int id);
enum whisper_sampling_strategy {
    CRISPASR_SAMPLING_GREEDY,      
    CRISPASR_SAMPLING_BEAM_SEARCH, 
};
typedef void (*whisper_new_segment_callback)(struct whisper_context* ctx, struct whisper_state* state, int n_new,
                                             void* user_data);
typedef void (*whisper_progress_callback)(struct whisper_context* ctx, struct whisper_state* state, int progress,
                                          void* user_data);
typedef bool (*whisper_encoder_begin_callback)(struct whisper_context* ctx, struct whisper_state* state,
                                               void* user_data);
typedef void (*whisper_logits_filter_callback)(struct whisper_context* ctx, struct whisper_state* state,
                                               const whisper_token_data* tokens, int n_tokens, float* logits,
                                               void* user_data);
struct whisper_full_params {
    enum whisper_sampling_strategy strategy;
    int n_threads;
    int n_max_text_ctx; 
    int offset_ms;      
    int duration_ms;    
    bool translate;
    bool no_context;       
    bool no_timestamps;    
    bool single_segment;   
    bool print_special;    
    bool print_progress;   
    bool print_realtime;   
    bool print_timestamps; 
    bool token_timestamps; 
    float thold_pt;        
    float thold_ptsum;     
    int max_len;           
    bool split_on_word;    
    int max_tokens;        
    bool debug_mode; 
    int audio_ctx;   
    bool tdrz_enable; 
    const char* suppress_regex;
    const char* initial_prompt;
    bool
        carry_initial_prompt; 
    const whisper_token* prompt_tokens;
    int prompt_n_tokens;
    const char* language;
    bool detect_language;
    bool
        suppress_blank; 
    bool
        suppress_nst; 
    float temperature; 
    float
        max_initial_ts; 
    float
        length_penalty; 
    float temperature_inc;
    float entropy_thold; 
    float logprob_thold;
    float no_speech_thold;
    struct {
        int best_of; 
    } greedy;
    struct {
        int beam_size; 
        float patience; 
    } beam_search;
    whisper_new_segment_callback new_segment_callback;
    void* new_segment_callback_user_data;
    whisper_progress_callback progress_callback;
    void* progress_callback_user_data;
    whisper_encoder_begin_callback encoder_begin_callback;
    void* encoder_begin_callback_user_data;
    ggml_abort_callback abort_callback;
    void* abort_callback_user_data;
    whisper_logits_filter_callback logits_filter_callback;
    void* logits_filter_callback_user_data;
    const whisper_grammar_element** grammar_rules;
    size_t n_grammar_rules;
    size_t i_start_rule;
    float grammar_penalty;
    bool vad;                   
    const char* vad_model_path; 
    whisper_vad_params vad_params;
    int alt_n;
    bool grammar_strict;
};
CRISPASR_API struct whisper_context_params* whisper_context_default_params_by_ref(void);
CRISPASR_API struct whisper_full_params* whisper_full_default_params_by_ref(enum whisper_sampling_strategy strategy);
CRISPASR_API int whisper_full(struct whisper_context* ctx, struct whisper_full_params params, const float* samples,
                              int n_samples);
CRISPASR_API int whisper_full_n_segments(struct whisper_context* ctx);
CRISPASR_API int whisper_full_lang_id(struct whisper_context* ctx);
CRISPASR_API int64_t whisper_full_get_segment_t0(struct whisper_context* ctx, int i_segment);
CRISPASR_API int64_t whisper_full_get_segment_t1(struct whisper_context* ctx, int i_segment);
CRISPASR_API const char* whisper_full_get_segment_text(struct whisper_context* ctx, int i_segment);
CRISPASR_API struct whisper_vad_params whisper_vad_default_params(void);
CRISPASR_API float whisper_full_get_segment_no_speech_prob(struct whisper_context* ctx, int i_segment);